proj: update deps

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -17,6 +17,6 @@ jobs:
 
       - name: Publish Package on NPM 📦
         working-directory: ./astro-inline-svg
-        run: npm publish
+        run: npm publish --access=public
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
