--- a/astro-inline-svg/package.json
+++ b/astro-inline-svg/package.json
@@ -27,7 +27,7 @@
     "node-html-parser": "^6.1.13"
   },
   "peerDependencies": {
-    "astro": "^4.0.0",
+    "astro": ">=4.0.0",
     "typescript": "^5.0.0"
   }
 }
